Parser/Parser.cpp
#include <iostream>
#include <assert.h>
#include "Parser.hpp"
using namespace Parser;

/* Error handling */
static void parser_error(
	Lexer::Token current,
	std::string expected)
{
	std::string msg;
	msg = "Expected: " + expected + " but found " + current.str + " type: ";
	switch (current.type) {
	case Lexer::Delimiter :
		msg += "Delimiter";
		break;
	case Lexer::Delimiter2:
		msg += "Delimiter2";
		break;
	case Lexer::Identifier:
		msg += "Identifier";
		break;
	case Lexer::Keyword:
		msg += "Keyword";
		break;
	case Lexer::NumericLiteral:
		msg += "NumericLiteral";
		break;
	case Lexer::Operator:
		msg += "Operator";
		break;
	case Lexer::String:
		msg += "String";
		break;
	default:
		msg += "Unknown";
		break;
	}
	msg += "\n";
	throw Parser_Exception_Unexpected_Symbol{ current.line, current.character, msg };
}

static void print_nonterm_type(NonterminalType t)
{
	constexpr std::string_view names[] =
	{
		"Start",
		"CALFile",
		"Package",
		"CALFileContent",
		"Unit",
		"UnitBody",
		"UnitEnd",
		"Actor",
		"ActorEnd",
		"ActorBody",
		"IOSig",
		"QualID",
		"QualIDList",
		"QualIDListElement",
		"ActorPars",
		"ActorPar",
		"ActorParsList",
		"PortDecl",
		"PortDecls",
		"PortDeclList",
		"Imports",
		"Import",
		/* Scheduling */
		"ActionSchedule",
		"ScheduleFSM",
		"ScheduleFSMEnd",
		"StateTransitionList",
		"StateTransition",
		"ActionTags",
		"ActionTagList",
		"PriorityOrder",
		"PriorityInequality",
		"PriorityInequalityList",
		"ActionTagInequalityList",
		/* Types */
		"Type",
		"IntegerType",
		"IntegerTypes",
		"Size",
		"ListType",
		"FloatType",
		"FloatTypes",
		/* Operations */
		"BooleanOperator",
		"ArithOperator",
		"BitOperator",
		"relOperator",
		"unaryBooleanOperator",
		"unaryBitOperator",
		"unaryArithOperator",
		"Op",
		"unaryOp",
		/* Expressions */
		"Expression",
		"Expressions",
		"ExpressionList",
		"ConstCalc",
		"SingleConstCalc",
		"SingleConstCalcList",
		"SingleExpression",
		"SingleExpressionList",
		"Negation",
		"ExpressionLiteral",
		"IfExpression",
		"IfEnd",
		"ListComprehension",
		"ListComprehensionContent",
		"ListComprehensionGenerator",
		"ListComprehensionExprs",
		"ListComprehensionExprsList",
		"Generator",
		"Generators",
		"GeneratorList",
		"CallExpr",
		"CallParameters",
		"Index",
		"SingleExpressionAdd",
		/* Functions */
		"FuncDecl",
		"FuncDeclEnd",
		"ProcDecl",
		"ProcDeclEnd",
		"NativeDecl",
		"NativeDeclDes",
		"NativeFuncDecl",
		"NativeProcedureDecl",
		"VarDecl",
		"VarDecls",
		"VarDeclList",
		"ArrayDef",
		"FormalPar",
		"FormalPars",
		"FormalParsList",
		/* Statement */
		"Statement",
		"IDStmt",
		"AssignmentStmt",
		"AssignmentExpr",
		"CallStmt",
		"BlockStmt",
		"BlockVarStmt",
		"IfStmt",
		"ElseStmt",
		"WhileStmt",
		"WhileStmtEnd",
		"ForeachStmt",
		"ForeachGenerator",
		"ForeachGeneratorList",
		"ForeachStmtEnd",
		"GeneratorType",
		"Statements",
		"ConstAsgn",
		"Asgn",
		/* Action */
		"Action",
		"InitializationAction",
		"InitializationActionEnd",
		"ActionTag",
		"ActionTagIDs",
		"ActionEnd",
		"ActionHead",
		"IDs",
		"IDList",
		"GuardBlock",
		"VarBlock",
		"ActionName",
		"StatementBlock",
		"InputPattern",
		"InputPatterns",
		"InputPatternList",
		"OutputExpression",
		"OutputExpressions",
		"OutputExpressionList",
		"OutputExpressionContent",
		"OutputExpressionContentList",
		"RepeatClause",
		"InitializerHead",
		/* Simplifications for AST Generation */
		"IndexEnd",
		"TypeEnd",
		"GuardEnd",
		"RepeatEnd",
		"CallExpressionEnd",
		"LiteralEnd",
		"UnaryOpEnd",
		"OpEnd"
	};

		std::cout << "Type: " << names[t] << std::endl;
}

/* Keller */
static void push_start(std::vector<Symbol>& keller)
{
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = CALFile });
}
static void push_CALFile(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{.type = Nonterminal, .nonterm_type= CALFileContent });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = Imports });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = Package });
}
static void push_Package(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .term_str = ";", .type = Terminal, .term_type = Special });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = QualID });
	keller.push_back(Symbol{ .term_str = "package", .type = Terminal, .term_type = Keyword });
}
static void push_Imports(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = Imports });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = Import });
}
static void push_Import(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .term_str = ";", .type = Terminal, .term_type = Special });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = QualID });
	keller.push_back(Symbol{ .term_str = "import", .type = Terminal, .term_type = Keyword });
}
static void push_Unit(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = UnitEnd });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = UnitBody });
	keller.push_back(Symbol{ .term_str = ":", .type = Terminal, .term_type = Special });
	keller.push_back(Symbol{ .term_str = "ID", .type = Terminal, .term_type = ID });
	keller.push_back(Symbol{ .term_str = "unit", .type = Terminal, .term_type = Keyword });
}
static void push_Actor(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = ActorEnd });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = ActionSchedule });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = InitializationAction });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = ActorBody });
	keller.push_back(Symbol{ .term_str = ":", .type = Terminal, .term_type = Special });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = IOSig });
	keller.push_back(Symbol{ .term_str = ")", .type = Terminal, .term_type = Special });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = ActorPars });
	keller.push_back(Symbol{ .term_str = "(", .type = Terminal, .term_type = Special });
	keller.push_back(Symbol{ .term_str = "ID", .type = Terminal, .term_type = ID });
	keller.push_back(Symbol{ .term_str = "actor", .type = Terminal, .term_type = Keyword });
}

static void push_IOSig(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = PortDecls });
	keller.push_back(Symbol{ .term_str = "==>", .type = Terminal, .term_type = Special });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = PortDecls });
}

static void push_QualID(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = QualIDList });
	keller.push_back(Symbol{ .term_str = "ID", .type = Terminal, .term_type = ID });
}

static void push_QualIDList(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = QualIDListElement });
	keller.push_back(Symbol{ .term_str = ".", .type = Terminal, .term_type = Special });
}

static void push_ActorPars(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = ActorParsList });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = ActorPar });
}

static void push_ActorPar(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = ConstAsgn });
	keller.push_back(Symbol{ .term_str = "ID", .type = Terminal, .term_type = ID });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = Type });
}

static void push_ActorParsList(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = ActorParsList });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = ActorPar });
	keller.push_back(Symbol{ .term_str = ",", .type = Terminal, .term_type = Special });
}

static void push_PortDecl(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .term_str = "ID", .type = Terminal, .term_type = ID });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = Type });
}

static void push_PortDecls(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = PortDeclList });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = PortDecl });
}

static void push_PortDeclList(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = PortDeclList });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = PortDecl });
	keller.push_back(Symbol{ .term_str = ",", .type = Terminal, .term_type = Special });
}

static void push_ActionSchedule(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{.type = Nonterminal, .nonterm_type = PriorityOrder });
	keller.push_back(Symbol{.type = Nonterminal, .nonterm_type = ScheduleFSM });
}

static void push_ScheduleFSM(std::vector<Parser::Symbol>& keller)
{
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = ScheduleFSMEnd });
	keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = StateTransitionList });
	keller.push_back(Symbol{ .term_str = ":", .type = Terminal, .term_type = Special });
	keller.push_back(Symbol{ .term_str = "ID", .type = Terminal, .term_type = ID });
	keller.push_back(Symbol{ .term_str = "fsm", .type = Terminal, .term_type = Keyword });
	keller.push_back(Symbol{ .term_str = "schedule", .type = Terminal, .term_type = Keyword });
}

/* Parse */

static inline bool is_type(Lexer::Token current)
{
	if ((current.type == Lexer::Keyword) &&
		((current.str == "list") || (current.str == "uint") || (current.str == "int") ||
			(current.str == "float") || (current.str == "half") || (current.str == "String") ||
			(current.str == "bool")))
	{
		return true;
	}
	else {
		return false;
	}

}

static inline bool is_arithop(Lexer::Token current)
{
	if ((current.type == Lexer::Operator) &&
		((current.str == "+") || (current.str == "-") || (current.str == "/") || (current.str == "*") || (current.str == "%")))
	{
		return true;
	}
	else {
		return false;
	}
}

static inline bool is_op(Lexer::Token current)
{
	if ((current.type == Lexer::Operator) &&
		((current.str =="+") || (current.str == "-") || (current.str == "/") || (current.str == "*") || (current.str == "%") || (current.str == "<") ||
		(current.str == ">") || (current.str == "=") || (current.str == "!=") || (current.str == ">=") || (current.str == "<=") ||
		(current.str == "<<") || (current.str == ">>") || (current.str == "^") || (current.str == "||") || (current.str == "&&") ||
		(current.str == "&") || (current.str == "|")))
	{
		return true;
	}
	else {
		return false;
	}
}

static inline bool is_unaryop(Lexer::Token current)
{
	if ((current.type == Lexer::Operator) &&
		((current.str =="!") || (current.str == "~") || (current.str == "++") || (current.str =="--")))
	{
		return true;
	}
	else {
		return false;
	}
}

static inline bool is_expressionliteral(Lexer::Token current)
{
	if ((current.type == Lexer::NumericLiteral) || (current.type == Lexer::String) ||
		((current.type == Lexer::Keyword) && ((current.str == "true") || (current.str == "false") || (current.str == "null"))))
	{
		return true;
	}
	else {
		return false;
	}
}

static void parse_Start(
	std::vector<Symbol>& keller,
	Lexer::Token current,
	AST::AST_Builder& builder)
{
	/* nothing to do for parse ops */

	push_start(keller);
}

static void parse_CALFile(
	std::vector<Symbol>& keller,
	Lexer::Token current,
	AST::AST_Builder& builder)
{
	if ((current.type == Lexer::Keyword) &&
		((current.str == "package") ||
		 (current.str == "import") ||
		 (current.str == "actor") ||
		 (current.str == "unit")))
	{
		push_CALFile(keller);
	}
	else {
		parser_error(current, "package, import, actor, unit");
	}
}

static void parse_Package(
	std::vector<Symbol>& keller,
	Lexer::Token current,
	AST::AST_Builder& builder)
{
	if ((current.type == Lexer::Keyword) && (current.str == "package")) {
		push_Package(keller);
	}
	else {
		/* Empty nothing to do - we can check follow set here, actually it is already covered by parse_package, but let's make it complete */
		if ((current.type == Lexer::Keyword) &&
			((current.str == "import") ||
			 (current.str == "actor") ||
			 (current.str == "unit")))
		{
			/* Nothing to do, follow is okay */
		}
		else {
			parser_error(current, "import, actor, unit");
		}
	}
}

static void parse_Imports(
	std::vector<Symbol>& keller,
	Lexer::Token current,
	AST::AST_Builder& builder)
{
	builder.end_Import();
	if ((current.type == Lexer::Keyword) && (current.str == "import")) {
		push_Imports(keller);
	}
	else {
		if ((current.type == Lexer::Keyword) &&
			((current.str == "actor") ||
			 (current.str == "unit")))
		{
			/* Nothing to do, follow is okay */
		}
		else {
			parser_error(current, "actor, unit");
		}
	}
}

static void parse_Import(
	std::vector<Symbol>& keller,
	Lexer::Token current,
	AST::AST_Builder& builder)
{
	builder.start_Import();

	if ((current.type == Lexer::Keyword) && (current.str == "import")) {
		push_Import(keller);
	}
	else {
		parser_error(current, "import");
	}
}

static void parse_CALFileContent(
	std::vector<Parser::Symbol>& keller,
	Lexer::Token current,
	AST::AST_Builder& builder)
{
	if ((current.type == Lexer::Keyword) && (current.str == "actor")) {
		keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = Actor });
	}
	else if ((current.type == Lexer::Keyword) && (current.str == "unit")) {
		keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = Unit });
	}
	else {
		parser_error(current, "unit, actor");
	}
}

static void parse_Unit(
	std::vector<Parser::Symbol>& keller,
	Lexer::Token current,
	AST::AST_Builder& builder)
{
	builder.start_Unit();
	if ((current.type == Lexer::Keyword) && (current.str == "unit")) {
		push_Unit(keller);
	}
	else {
		parser_error(current, "unit");
	}
}

static void parse_UnitBody(
	std::vector<Parser::Symbol>& keller,
	Lexer::Token current,
	AST::AST_Builder& builder)
{
	builder.end_VarDefinition(); /* there is no endsymbol for VarDecl in ActorBody, this should do as well */
	if ((current.type == Lexer::Keyword) &&
		((current.str == "list") || (current.str == "uint") || (current.str == "int") ||
			(current.str == "float") || (current.str == "half") || (current.str == "String")))
	{
		keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = UnitBody });
		keller.push_back(Symbol{ .term_str = ";", .type = Terminal, .term_type = Special });
		keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = VarDecl });
	}
	else if ((current.type == Lexer::Keyword) && (current.str == "function")) {
		keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = UnitBody });
		keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = FuncDecl });
	}
	else if ((current.type == Lexer::Keyword) && (current.str == "procedure")) {
		keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = UnitBody });
		keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = ProcDecl });
	}
	else if ((current.type == Lexer::Operator) && (current.str == "@")) {
		keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = UnitBody });
		keller.push_back(Symbol{ .type = Nonterminal, .nonterm_type = NativeDecl });
	}
	else if ((current.type == Lexer::Keyword) && ((current.str == "end") || (current.str == "endunit"))) {
		/* okay nothing to do, follow set. */
	}
	else {
		parser_error(current, "end, endunit");
	}
}
